--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
@@ -146,8 +146,7 @@
 	\end{equation}
 	where $N_P(u)$ is the number of nucleosomes pushed with undamaged DNA and $N_S(u)$ is the number of nucleosomes sliding out of the DR.
 	
-	We assume that the total number of nucleosomes extruded from the DR is proportional to the 
-	
+	The exact relationship between the 
 	
 	To be able to slide nucleosomes from damaged DNA, nucleosomes on undamaged DNA need to slide as well. Therefore, sliding affects nucleosomes on non-damaged DNA as well [REF]. We therefore propose that the rate of nucleosomes leaving the DR by sliding is proportional to the fraction of nucleosomes affected by increase of UV dose in $A_0$. In the first-order approximation, the dynamics of nucleosomes sliding, $N_S(u)$, is given by
 	\begin{equation}\label{eq:nucleosomeSlideRate}
