--- a/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
+++ b/Documents/Report/FinalReportVersions/Version07/MaterialsAndMethodsModel.tex
@@ -135,7 +135,7 @@
 	\end{equation}	
 	with $k_t$ a constant. Using the initial condition $T(0) = 0$, the solution to equation \eqref{eq:damagesRate} is
 	\begin{equation*}\label{eq:damagesIDR}
-	T(u) = c_dA_0(1-\exp(−k_tu))
+	T(u) = c_dA_0(1-\exp(-k_tu))
 	\end{equation*}
 	
 	\subsection{Deriving the functions describing loss of nucleosome from the IDR and the ROI expansion}
@@ -145,17 +145,20 @@
 	N(u)=N_P(u)+N_S(u)
 	\end{equation}
 	where $N_P(u)$ is the number of nucleosomes pushed with undamaged DNA and $N_S(u)$ is the number of nucleosomes sliding out of the DR.
+		
+	In our model we assume that for $T(u)$ damages, the position of nucleosomes along the DNA 15 minutes post UV-C allows repair with no further sliding of nucleosomes out of the DR. Because nucleosomes wrapped by damaged DNA will be forced to displace in order to expose the damage position, an addition of $dT(u)$ damage will change the organization reached for $T(u)$ to a new one allowing repair with no further sliding. 
 	
-	The exact relationship between the 
-	
-	To be able to slide nucleosomes from damaged DNA, nucleosomes on undamaged DNA need to slide as well. Therefore, sliding affects nucleosomes on non-damaged DNA as well [REF]. We therefore propose that the rate of nucleosomes leaving the DR by sliding is proportional to the fraction of nucleosomes affected by increase of UV dose in $A_0$. In the first-order approximation, the dynamics of nucleosomes sliding, $N_S(u)$, is given by
+	In the first-order approximation, the expected additional number of nucleosomes affected by $dT(u)$ damages is $(c_nA_0-N(u))dT(u)$. Therefore, we write	
 	\begin{equation}\label{eq:nucleosomeSlideRate}
 	\frac{dN_S(u)}{du} = k_s\left( c_nA_0-N(u))\right)\frac{dT(u)}{du}	
 	\end{equation}
 	with $k_s$ a constant of units $1/bp$. 
 	
-    Exposing damages by nucleosome sliding allows binding of repair proteins to damaged positions, thus gradually increasing the pushing force outwards. In addition, repair protein crowding contributes to pushing undamaged DNA out of the DR. 
-	The rate at which nucleosomes are extruded from the DR by pushing is comprised of 
+    The nucleosomes lost by chromatin de-compaction are those translocated along with undamaged DNA in the DR. Therefore     
+	\begin{equation}
+	N_P(u) = k_p(c_dA_0-T(u))
+	\end{equation}
+	with $k_p$ a constant of units $nucleosomes/bp$. 
 	
 	\begin{equation}\label{eq:nucleosomePushRate}
     \frac{dN_P(u)}{du}=k_p\left((c_nA_0-N(u))-k_s(c_nA_0-N_S(u))\right)\frac{dT(u)}{du}
